# Applied-Programming-2025

./: README.md  pyproject.toml
TCP_Server/: main.py
exercises/01/: 01_understand_git.py  02_read_manual.py  02_reading_the_manual.py
exercises/02/: 03_loading_and_visualizing_data.py  03_solution.py  exercise_load_and_visualize.py  readme_load_and_visualize.md  solution_load_and_visualize.py
exercises/03/: 04_ui_control.py  readme_pyside_ui.md  solution_pyside_ui.py
exercises/04/: readme.md
exercises/04/exercise/: main.py
exercises/04/exercise/viewmodels/: mainViewModel.py
exercises/04/exercise/views/: mainView.py  plotView.py
exercises/04/solution/: main.py
exercises/04/solution/models/: signal_model.py
exercises/04/solution/viewmodels/: mainViewModel.py
exercises/04/solution/views/: mainView.py  plotView.py
exercises/05/: README_TCP_Client_Exercise.md
exercises/05/exercise/: main.py
exercises/05/exercise/models/: tcp_client_model.py
exercises/05/exercise/viewmodels/: mainViewModel.py
exercises/05/exercise/views/: mainView.py  plotView.py
