[project]
name = "applied-programming-2025"
version = "0.1.0"
description = "The exercises for the Applied Programming class of 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.12.4",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "vispy>=0.15.2",
]

[dependency-groups]
staff = [
    "nbformat>=5.10.4",
]
